@@ -105,6 +105,8 @@ o qmail-remote can use credentials stored in remote_auth.cdb using simple or
 60. recipients.c: fix for SRS rewritten addresses.
 - 01/11/2022
 61. added test-recipients, make-recipients programs
+- 03/11/2022
+62. qmail-showctl.c: added remote_auth, recipients control file
 
 * Thu 08 Sep 2022 12:31:45 +0000 Manvendra Bhangui <indimail-mta@indimail.org> 3.0.1-1.1%{?dist}
 Release 3.0.1 Start 21/05/2022 End 08/09/2022
